26.08 - fix flickering dropdown

--- a/src/assets/scss/ta-input-dropdown.scss
+++ b/src/assets/scss/ta-input-dropdown.scss
@@ -474,6 +474,10 @@
         width: 245px;
       }
 
+      &.w-col-229 {
+        width: 229px;
+      }
+
       &.w-col-228 {
         width: 228px;
       }
